--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,11 @@
 <div class="container container-product white-box">
   <div class="product-title-container">
+    <% if policy(@product).update? %>
+      <%= link_to 'Modifier matériel', edit_product_path(@product), class: "loxam-btn edit-btn" %>
+    <% end %>
     <h2><%= @product.name %></h2>
     <div class="favorite-star-container-product-<%= @product.id %>">
-      <% if current_user.products.include? @product %>
+      <% if (user_signed_in?) && (current_user.products.include? @product) %>
         <%= link_to product_favorite_path(current_user, @product), class: 'btn-favorite-active', remote: true, :method => :delete, :data => { toggle: 'popover', trigger: 'hover', content: 'Retirer des favoris', placement: 'left' } do %>
           <i class="fa fa-star"></i>
           <script>
