product page almost done

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,7 +1,8 @@
 // Import page-specific CSS files here.
 @import "home";
-@import "product";
 @import "admin_dashboard";
 @import "location";
 @import "vente";
 @import "mon_espace";
+@import "product/product_show";
+@import "product/product_edit";
