db almost fixed

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,5 +4,6 @@
 @import "location";
 @import "vente";
 @import "mon_espace";
+@import "affiliate";
 @import "product/product_show";
 @import "product/product_edit";
