--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,14 @@
     <meta name="keywords" content="location matériel, materiel travaux, batiment, rennovation, achat materiel corse, location amteriel corse, louer outils, location outil, loxam, loxam corse, loxam bastia, location outil nettoyage, outil beton, outil batiment, outil peinture, outil electrique">
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
     <%= render 'shared/navbar' %>
-    <%= render 'shared/categories' %>
+    <% unless params[:name] && current_page?(affiliate_path) %>
+      <%= render 'shared/categories' %>
+    <% end %>
     <a href="#"><i id="scrollToTop" class="fa fa-arrow-circle-up"></i></a>
       <%= yield %>
     <%= javascript_pack_tag 'application' %>
