--- a/app/views/affiliates/show.html.erb
+++ b/app/views/affiliates/show.html.erb
@@ -1,21 +1,28 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-6" id="slider-affiliate-images">
+  <div class="col-xs-12" id="slider-affiliate-images">
     <% @affiliate.affiliate_images.each do |image| %>
       <%= cl_image_tag image.url %>
     <% end %>
   </div>
-  <div class="col-xs-12 col-sm-6">
+  <div class="col-xs-12 white-box">
     <h1><%= @affiliate.name.upcase %></h1>
     <h2><%= @affiliate.tagline.capitalize %></h2>
+    <%= cl_image_tag @affiliate.logo, height: '200' %>
   </div>
 </div>
 
-<% @affiliate.affiliate_categories.each do |category| %>
-  <div>
-    <h3><%= category.name.upcase %></h3>
-    <%= cl_image_tag category.image %>
-    <strong><%= category.spec %></strong>
-    <p><%= category.description %></p>
-  </div>
-<% end %>
-
+<div class="container">
+  <% @affiliate.affiliate_categories.each do |category| %>
+    <div class="affiliate-category-card white-box">
+      <div class="affiliate-category-card-image">
+        <%= cl_image_tag category.image %>
+      </div>
+      <div class="affiliate-category-card-content">
+        <h3><%= category.name.upcase %></h3>
+        <strong><%= category.spec %></strong>
+        <p><%= category.description %></p>
+        <%= link_to "Demande d'informations", contact_path, class: 'loxam-btn' %>
+      </div>
+    </div>
+  <% end %>
+</div>
