--- a/app/assets/stylesheets/pages/_affiliate.scss
+++ b/app/assets/stylesheets/pages/_affiliate.scss
@@ -1,13 +1,27 @@
+.banner-affiliate {
+  background-color: #fff;
+  // box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07), 0 1px 0 0 rgba(0, 0, 0, 0.03);
+  // box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07)
+  box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.07);
+  h1 {
+    background-color: $loxam-color;
+    color: #fff;
+    text-align: center;
+    margin-top: 0;
+  }
+}
+
 #slider-affiliate-images {
   position: relative;
   // display: flex;
   // justify-content: center;
-  height: 50vh;
+  height: 40vh;
   // margin: 0 auto;
   img {
     position: absolute;
     // height: 100%;
     width: 100%;
+    height: 100%;
     display: none;
     object-fit: cover;
   };
