--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,8 +15,15 @@
     justify-content: center;
     margin-bottom: 10px;
   };
+}
+
+.loxam-types-container a {
+  border: 1px solid transparent;
+  &:hover {
+    border-color: $loxam-color;
+  };
   img {
-    height: 100px;
+    height: 150px;
     box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
     border-radius: 2px;
   }
