--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <div class="row">
       <% @affiliates.each do |affiliate| %>
         <div class="col-xs-12 col-sm-6 col-md-3"><%= link_to affiliate_path(affiliate.name) do %>
-            <%= image_tag(affiliate.logo) %>
+            <%= cl_image_tag(affiliate.logo) %>
           <% end %>
         </div>
       <% end %>
