--- a/app/assets/stylesheets/pages/_affiliate.scss
+++ b/app/assets/stylesheets/pages/_affiliate.scss
@@ -3,12 +3,18 @@
   // box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07), 0 1px 0 0 rgba(0, 0, 0, 0.03);
   // box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07)
   box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.07);
-  h1 {
-    background-color: $loxam-color;
-    color: #fff;
-    text-align: center;
-    margin-top: 0;
-  }
+  // h1 {
+  //   // background-color: $loxam-color;
+  //   // color: #fff;
+  //   // text-align: center;
+  //   // margin-top: 0;
+  // };
+  .col-xs-12:first-child {
+    padding-right: 0;
+  };
+  .col-xs-12:last-child {
+    padding-left: 0;
+  };
 }
 
 #slider-affiliate-images {
