--- a/app/assets/stylesheets/pages/_vente.scss
+++ b/app/assets/stylesheets/pages/_vente.scss
@@ -32,7 +32,19 @@
   display: flex;
   justify-content: space-between;
   background-color: #f8f8f8;
+  padding: 5px;
   img {
     object-fit: contain;
+  }
+}
+
+.vente-page-intro {
+  margin-bottom: 40px;
+}
+
+.vente-page-catalog {
+  margin-bottom: 40px;
+  h4 {
+    margin-top: 0;
   }
 }
