--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </head>
   <body>
     <%= render 'shared/navbar' %>
-    <% unless params[:name] && current_page?(affiliate_path) %>
+    <% unless params[:name] && current_page?(affiliate_path) || current_page?(vente_path) %>
       <%= render 'shared/categories' %>
     <% end %>
     <a href="#"><i id="scrollToTop" class="fa fa-arrow-circle-up"></i></a>
