--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,11 @@
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <% avatar_url = current_user.avatar || asset_path('nut.png') %>
+          <% if current_user.avatar.is_a? String %>
+            <% avatar_url = current_user.avatar %>
+          <% else %>
+            <% avatar_url = asset_path('nut.png') %>
+          <% end %>
           <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown", gravity: "face", crop: "crop" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
