fixed categories ranking on dashboard

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -65,7 +65,8 @@
 // Home page btn favorites and categories shwo
 .row-les-plus-recherches,
 .row-les-nouveautes,
-.categories-page-container, {
+.categories-page-container,
+.container-mon-espace {
   .btn-favorite, .btn-favorite-active {
     position: absolute;
     right: 20px;
