working on details

--- a/app/assets/stylesheets/pages/_affiliate.scss
+++ b/app/assets/stylesheets/pages/_affiliate.scss
@@ -21,7 +21,7 @@
   position: relative;
   // display: flex;
   // justify-content: center;
-  height: 40vh;
+  // height: 40vh;
   // margin: 0 auto;
   img {
     position: absolute;
