--- a/app/assets/stylesheets/pages/_mon_espace.scss
+++ b/app/assets/stylesheets/pages/_mon_espace.scss
@@ -1,3 +1,12 @@
 .container-mon-espace .item-card {
   position: relative;
 }
+
+.container-intro-user,
+.container-invoices {
+  padding: 15px;
+}
+
+.container-intro-user h2 {
+  margin-top: 0;
+}
