--- a/app/views/pages/mon_espace.html.erb
+++ b/app/views/pages/mon_espace.html.erb
@@ -1,5 +1,11 @@
 <div class="container container-mon-espace">
-  <h1><%= @user.name %></h1>
+  <div class="container-intro-user white-box">
+    <h2>Bienvenue dans votre espace client <span class="loxam-name"><span>Loxam</span> <span>Bastia</span></span> <strong><%= @user.name.upcase %></strong>!</h2>
+    <p>Vous trouverez dans cet espace vos factures mises à votre disposition chaque mois, consultables et téléchargeables au format pdf. <br>
+    Vous avez aussi la possibilité d'ajouter des matériels en favoris à partir de n'importe quelle page du site, et les retrouverez ici même. <br>
+    Bonne navigation!</p>
+  </div>
+  <h2>Mes favoris</h2>
   <div class="row">
     <% @user.products.each do |product| %>
       <div class="col-xs-12 col-sm-6 col-md-3 col-item-card" id="mon-espace-card-<%= product.id %>">
@@ -32,10 +38,15 @@
       </div>
     <% end %>
   </div>
-  <ul>
+
+  <h2>Mes factures</h2>
+  <div class="container-invoices white-box">
+    <%= content_tag(:p, "Vous n'avez aucune facture disponible") if @invoices.empty? %>
     <% @invoices.each do |invoice| %>
-      <li><a href="<%= cl_image_path invoice.pdf %>" target="_blank" class="loxam-btn">Facture</a>
-      </li>
+      <div>
+        <a href="<%= cl_image_path invoice.pdf %>" target="_blank" class="loxam-btn">Facture</a>
+      </div>
     <% end %>
-  </ul>
+  </div>
+
 </div>
