--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
     <div class="col-sm-12 col-md-7 col-best-searches">
       <!-- Les plus recherchés -->
       <div class="row row-les-plus-recherches">
-        <h2 class="title-les-plus-recherchés">LES PLUS RECHERCHÉS</h2>
+        <h2 class="h2-gray-box title-les-plus-recherchés">LES PLUS RECHERCHÉS</h2>
         <% @best_searches.each do |product| %>
           <div class="col-xs-12 col-sm-6 col-item-card">
             <div class="item-card white-box">
@@ -66,7 +66,7 @@
       </div>
         <!-- Les nouveautés -->
       <div class="row row-les-nouveautes">
-        <h2 class="title-les-plus-recherchés">LES NOUVEAUTÉS</h2>
+        <h2 class="h2-gray-box title-les-plus-recherchés">LES NOUVEAUTÉS</h2>
         <% @new_products.each do |product| %>
           <div class="col-xs-12 col-sm-6 col-item-card">
             <div class="item-card white-box">
