monn espce alomost done

--- a/app/assets/stylesheets/pages/_mon_espace.scss
+++ b/app/assets/stylesheets/pages/_mon_espace.scss
@@ -2,11 +2,17 @@
   position: relative;
 }
 
-.container-intro-user,
-.container-invoices {
+.container-intro-user {
   padding: 15px;
 }
 
 .container-intro-user h2 {
   margin-top: 0;
+}
+
+.container-invoices .row-invoice {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
