--- a/app/assets/stylesheets/pages/dashboard/_products.scss
+++ b/app/assets/stylesheets/pages/dashboard/_products.scss
@@ -32,7 +32,7 @@
     height: 28px;
   }
   .fa-trash {
-    position: static;
+    // position: static;
     font-size: 14px;
   };
   .simple_form {
