--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -50,7 +50,6 @@
   border-radius: 3px;
   color: #fff;
   background-color: $loxam-color;
-  position: absolute;
   right: 15px;
   top: 15px;
   &:hover {
@@ -58,6 +57,10 @@
     background-color: #fff;
   }
 };
+
+.fa-edit {
+  position: absolute;
+}
 
 .fa-edit {
   right: 45px;
