--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -43,23 +43,22 @@
       Pour toute location, un dépôt de garantie (uniquement en carte bleue) est demandé en fonction de la classification des matériels.</p>
     </div>
 
-    <%= f.button :submit, class: 'loxam-btn btn-create-product' %>
 
     <div class="row">
       <div class="col-xs-12 col-sm-6">
         <div class="container-expendables">
           <h3>Accessoires disponibles à la location de: <%= @product.name %></h3>
-          <% if @product.expendables.any? %>
-            <ul>
-              <% @product.expendables.each do |expendable| %>
-              <li><%= expendable.name %> - <%= expendable.price.round %>€</li>
+
+          <table>
+            <tbody class="fields">
+              <%= simple_fields_for :expendables do |builder| %>
+                <%= render 'expendables/form', f: builder %>
               <% end %>
-            </ul>
-          <% else %>
-            <p>Aucun consommable disponible pour ce matériel</p>
-          <% end %>
+            </tbody>
+          </table>
         </div>
       </div>
+
       <div class="col-xs-12 col-sm-6">
         <div class="message-form-product-page">
           <h3><%= @product.name %> vous intéresse?</h3>
@@ -81,5 +80,6 @@
         </div>
       </div>
     </div>
+    <%= f.button :submit, class: 'loxam-btn btn-create-product' %>
   </div>
 <% end %>
